Update author name and links in projects.html

--- a/projects.html
+++ b/projects.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Projects | Niknaz Sadehvandi</title>
+  <title>Projects | Nikki Sadvand</title>
 
   <!-- SEO -->
-  <meta name="description" content="Cybersecurity projects by Niknaz Sadehvandi — SIEM engineering, SOC detections, DFIR investigations, and threat intelligence analysis." />
+  <meta name="description" content="Cybersecurity projects by Nikki Sadvand — SIEM engineering, SOC detections, DFIR investigations, and threat intelligence analysis." />
   <meta name="robots" content="index,follow" />
 
   <link rel="icon" href="assets/favicon.png" />
@@ -98,16 +98,16 @@
   <div class="nav">
     <div class="brand">
       <div class="lock"></div>
-      <div>Niknaz Sadehvandi</div>
+      <div>Nikki Sadvand</div>
     </div>
     <nav aria-label="Primary">
-  <ul>
-    <li><a href="index.html">Home</a></li>
-    <li><a class="active" href="projects.html">Projects</a></li>
-    <li><a href="certifications.html">Certifications</a></li>
-    <li><a href="contact.html">Contact</a></li>
-  </ul>
-</nav>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a class="active" href="projects.html">Projects</a></li>
+        <li><a href="certifications.html">Certifications</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </nav>
   </div>
 </header>
 
@@ -123,13 +123,13 @@
       <div class="pad">
         <div class="kicker">SOC / SIEM</div>
         <h3>Elastic SIEM Endpoint Telemetry (Sysmon)</h3>
-        <p>Fleet-managed endpoint telemetry pipeline using Sysmon v15+ validated with KQL queries in Kibana Discove.</p>
+        <p>Fleet-managed endpoint telemetry pipeline using Sysmon v15+ validated with KQL queries in Kibana Discover.</p>
         <ul class="meta">
           <li>Process, network, and PowerShell events</li>
           <li>SOC-style validation in Discover</li>
         </ul>
         <div class="btns">
-          <a class="btn" href="https://github.com/niknaz-65/elastic-siem-sysmon-endpoint-telemetry" target="_blank">GitHub Repo</a>
+          <a class="btn" href="https://github.com/Nikki-65/elastic-siem-sysmon-endpoint-telemetry" target="_blank">GitHub Repo</a>
         </div>
       </div>
     </article>
@@ -146,7 +146,7 @@
           <li>Network-focused SOC detections</li>
         </ul>
         <div class="btns">
-          <a class="btn" href="https://github.com/niknaz-65/elastic-siem-zeek-network-detections" target="_blank">GitHub Repo</a>
+          <a class="btn" href="https://github.com/Nikki-65/elastic-siem-zeek-network-detections" target="_blank">GitHub Repo</a>
         </div>
       </div>
     </article>
@@ -156,14 +156,14 @@
       <div class="thumb"></div>
       <div class="pad">
         <div class="kicker">SOC / SIEM</div>
-        <h3>Splunk Detections & Dashboards</h3>
+        <h3>Splunk Detections &amp; Dashboards</h3>
         <p>SPL detections and dashboards for authentication failures and suspicious activity.</p>
         <ul class="meta">
           <li>Event ID 4625 / 4672</li>
           <li>Triage-focused dashboards</li>
         </ul>
         <div class="btns">
-          <a class="btn" href="https://github.com/niknaz-65/splunk-detections-dashboards" target="_blank">GitHub Repo</a>
+          <a class="btn" href="https://github.com/Nikki-65/splunk-detections-dashboards" target="_blank">GitHub Repo</a>
         </div>
       </div>
     </article>
@@ -180,7 +180,7 @@
           <li>Evidence-based conclusions</li>
         </ul>
         <div class="btns">
-          <a class="btn" href="https://github.com/niknaz-65/digital-forensics-project3" target="_blank">GitHub Repo</a>
+          <a class="btn" href="https://github.com/Nikki-65/digital-forensics-project3" target="_blank">GitHub Repo</a>
         </div>
       </div>
     </article>
@@ -190,14 +190,14 @@
       <div class="thumb"></div>
       <div class="pad">
         <div class="kicker">Threat Intelligence</div>
-        <h3>IOC Hunting & CTI Analysis</h3>
+        <h3>IOC Hunting &amp; CTI Analysis</h3>
         <p>Processed 30,000+ indicators to support CTI enrichment workflows.</p>
         <ul class="meta">
           <li>OTX indicators</li>
           <li>API-driven enrichment</li>
         </ul>
         <div class="btns">
-          <a class="btn" href="https://github.com/niknaz-65/cti-ioc-hunting-otx" target="_blank">GitHub Repo</a>
+          <a class="btn" href="https://github.com/Nikki-65/cti-ioc-hunting-otx" target="_blank">GitHub Repo</a>
         </div>
       </div>
     </article>
@@ -207,14 +207,14 @@
       <div class="thumb"></div>
       <div class="pad">
         <div class="kicker">Computer Architecture</div>
-        <h3>8-bit ALU & Simple CPU</h3>
+        <h3>8-bit ALU &amp; Simple CPU</h3>
         <p>Designed and implemented an 8-bit CPU in Logisim-evolution.</p>
         <ul class="meta">
           <li>ALU operations and control unit</li>
           <li>Instruction execution</li>
         </ul>
         <div class="btns">
-          <a class="btn" href="https://github.com/niknaz-65/alu-cpu-logisim" target="_blank">GitHub Repo</a>
+          <a class="btn" href="https://github.com/Nikki-65/alu-cpu-logisim" target="_blank">GitHub Repo</a>
         </div>
       </div>
     </article>
@@ -224,8 +224,8 @@
 
 <footer>
   <div class="foot">
-    <small>© <span id="y"></span> Niknaz Sadehvandi</small>
-    <a href="Niknaz_Sadehvandi_Cybersecurity_Analyst_Resume.pdf" target="_blank">Download Resume</a>
+    <small>© <span id="y"></span> Nikki Sadvand</small>
+    <a href="Nikki_Sadvand_Cybersecurity_Analyst_Resume.pdf" target="_blank">Download Resume</a>
   </div>
 </footer>
 
