Revise summary and job titles in index.html
Updated summary to enhance clarity and conciseness. Adjusted job titles and descriptions for better readability.

--- a/index.html
+++ b/index.html
@@ -220,16 +220,10 @@
       </ul>
 
       <p class="summary">
-        Cybersecurity Analyst with experience in SIEM monitoring, endpoint and network telemetry analysis, and SOC investigations.
-        Founder of NS Cybersecurity, delivering Elastic SIEM ingestion pipelines, Sysmon and Zeek telemetry, and Windows security assessments aligned with MITRE ATT&CK, NIST, and SOX ITGC. [file:23]
-      </p>
+       Cybersecurity Analyst specializing in SIEM monitoring, alert triage, endpoint and network telemetry analysis, and SOC investigations. Experience building Elastic SIEM pipelines with Sysmon and Zeek and conducting Windows security assessments aligned with MITRE ATT&CK, NIST, and SOX ITGC.
 
-      <p class="summary">
-        Founder &amp; Cybersecurity Consultant — NS Cybersecurity (Dec 2024–Present). [file:23]
-      </p>
-
-      <p class="summary">
-        Cybersecurity &amp; IT Support Technician — Sunset Auto Sales (Mar 2019–Present). [file:23]
+        Founder & Cybersecurity Consultant | NS Cybersecurity (Dec 2024–Present)
+        Cybersecurity & IT Support Technician | Sunset Auto Sales (Mar 2019–Present)
       </p>
 
       <div class="cta">
