--- a/index.html
+++ b/index.html
@@ -220,10 +220,16 @@
       </ul>
 
       <p class="summary">
-    Cybersecurity Analyst specializing in SIEM monitoring, alert triage, endpoint and network telemetry analysis, and SOC investigations. Experience building Elastic SIEM pipelines with Sysmon and Zeek and conducting Windows security assessments aligned with MITRE ATT&CK, NIST, and SOX ITGC.
+        Cybersecurity Analyst specializing in SIEM monitoring, alert triage, endpoint and network telemetry analysis, and SOC investigation.
+        Experience building Elastic SIEM pipelines with Sysmon and Zeek and conducting Windows security assessments aligned with MITRE ATT&CK, NIST, and SOX ITGC.
+      </p>
 
-Founder & Cybersecurity Consultant | NS Cybersecurity (Dec 2024–Present)
-Cybersecurity & IT Support Technician | Sunset Auto Sales (Mar 2019–Present)
+      <p class="summary">
+        Founder &amp; Cybersecurity Consultant — NS Cybersecurity (Dec 2024–Present). 
+      </p>
+
+      <p class="summary">
+        Cybersecurity &amp; IT Support Technician — Sunset Auto Sales (Mar 2019–Present). 
       </p>
 
       <div class="cta">
