Replace ampersands with pipes in job titles

--- a/index.html
+++ b/index.html
@@ -225,11 +225,11 @@
       </p>
 
       <p class="summary">
-        Founder &amp; Cybersecurity Consultant — NS Cybersecurity (Dec 2024–Present). 
+        Founder & Cybersecurity Consultant | NS Cybersecurity (Dec 2024–Present). 
       </p>
 
       <p class="summary">
-        Cybersecurity &amp; IT Support Technician — Sunset Auto Sales (Mar 2019–Present). 
+        Cybersecurity & IT Support Technician | Sunset Auto Sales (Mar 2019–Present). 
       </p>
 
       <div class="cta">
