Replace project link with direct PDF link
Updated project link to point to a PDF document.

--- a/index.html
+++ b/index.html
@@ -315,18 +315,19 @@
         </p>
       </article>
 
-      <article class="project">
-        <span class="kicker">Forensics / DFIR</span>
-        <h3>Forensic Analysis of an Intrusion</h3>
-        <p>
-          Investigated persistence mechanisms and SSH-based exfiltration. Used FTK Imager, Autopsy, and Autoruns to reconstruct a timeline and document remediation aligned with NIST and ITGC.
-        </p>
-        <p>
-          <a href="https://github.com/Nikki-65/digital-forensics-project3" target="_blank" rel="noopener">
-            View project &rarr;
-          </a>
-        </p>
-      </article>
+     <article class="project">
+  <span class="kicker">Forensics / DFIR</span>
+  <h3>Forensic Analysis of an Intrusion</h3>
+  <p>
+    Investigated persistence mechanisms and SSH-based exfiltration. Used FTK Imager, Autopsy, and Autoruns to reconstruct a timeline and document remediation aligned with NIST and ITGC.
+  </p>
+  <p>
+    <a href="https://raw.githubusercontent.com/Nikki-65/dfir-intrusion-investigation/main/Digital-Forensics-Project3-Forensic-Analysis-of-an-Intrusion.pdf"
+       target="_blank" rel="noopener">
+      View project →
+    </a>
+  </p>
+</article>
 
       <article class="project">
         <span class="kicker">SOC / SIEM</span>
