Update link to forensics report in index.html

--- a/index.html
+++ b/index.html
@@ -322,10 +322,9 @@
     Investigated persistence mechanisms and SSH-based exfiltration. Used FTK Imager, Autopsy, and Autoruns to reconstruct a timeline and document remediation aligned with NIST and ITGC.
   </p>
   <p>
-    <a href="https://raw.githubusercontent.com/Nikki-65/dfir-intrusion-investigation/main/Digital-Forensics-Project3-Forensic-Analysis-of-an-Intrusion.pdf"
-       target="_blank" rel="noopener">
-      View project →
-    </a>
+    <a href="./assets/forensics-report.pdf" target="_blank" rel="noopener">
+  View project →
+</a>
   </p>
 </article>
 
